// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/timeline/demo/alternate.md correctly 1`] = `
LoadedCheerio {
  "0": <ul
    class="dcloud-timeline dcloud-timeline-alternate"
  >
    <li
      class="dcloud-timeline-item dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-green"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Solve initial network problems 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-custom dcloud-timeline-item-head-blue"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
          style="font-size:16px"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="dcloud-timeline-item-content"
      >
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-red"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Network problems being solved 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-last dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-custom dcloud-timeline-item-head-blue"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
          style="font-size:16px"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="dcloud-timeline-item-content"
      >
        Technical testing 2015-09-01
      </div>
    </li>
  </ul>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/timeline/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <ul
    class="dcloud-timeline"
  >
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Solve initial network problems 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Technical testing 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-last"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Network problems being solved 2015-09-01
      </div>
    </li>
  </ul>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/timeline/demo/color.md correctly 1`] = `
LoadedCheerio {
  "0": <ul
    class="dcloud-timeline"
  >
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-green"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-green"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-red"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        <p>
          Solve initial network problems 1
        </p>
        <p>
          Solve initial network problems 2
        </p>
        <p>
          Solve initial network problems 3 2015-09-01
        </p>
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        <p>
          Technical testing 1
        </p>
        <p>
          Technical testing 2
        </p>
        <p>
          Technical testing 3 2015-09-01
        </p>
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-gray"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        <p>
          Technical testing 1
        </p>
        <p>
          Technical testing 2
        </p>
        <p>
          Technical testing 3 2015-09-01
        </p>
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-last"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-gray"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        <p>
          Technical testing 1
        </p>
        <p>
          Technical testing 2
        </p>
        <p>
          Technical testing 3 2015-09-01
        </p>
      </div>
    </li>
  </ul>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/timeline/demo/custom.md correctly 1`] = `
LoadedCheerio {
  "0": <ul
    class="dcloud-timeline"
  >
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Solve initial network problems 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-custom dcloud-timeline-item-head-red"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle timeline-clock-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="dcloud-timeline-item-content"
      >
        Technical testing 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-last"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Network problems being solved 2015-09-01
      </div>
    </li>
  </ul>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/timeline/demo/label.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
    style="margin-bottom:20px"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="left"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Left
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="right"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Right
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="alternate"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Alternate
      </span>
    </label>
  </div>,
  "1": <ul
    class="dcloud-timeline dcloud-timeline-label"
  >
    <li
      class="dcloud-timeline-item dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-label"
      >
        2015-09-01
      </div>
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-label"
      >
        2015-09-01 09:12:11
      </div>
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Solve initial network problems
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Technical testing
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-last dcloud-timeline-item-left"
    >
      <div
        class="dcloud-timeline-item-label"
      >
        2015-09-01 09:12:11
      </div>
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Network problems being solved
      </div>
    </li>
  </ul>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/timeline/demo/pending.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <ul
      class="dcloud-timeline dcloud-timeline-pending"
    >
      <li
        class="dcloud-timeline-item"
      >
        <div
          class="dcloud-timeline-item-tail"
        />
        <div
          class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
        />
        <div
          class="dcloud-timeline-item-content"
        >
          Create a services site 2015-09-01
        </div>
      </li>
      <li
        class="dcloud-timeline-item"
      >
        <div
          class="dcloud-timeline-item-tail"
        />
        <div
          class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
        />
        <div
          class="dcloud-timeline-item-content"
        >
          Solve initial network problems 2015-09-01
        </div>
      </li>
      <li
        class="dcloud-timeline-item dcloud-timeline-item-last"
      >
        <div
          class="dcloud-timeline-item-tail"
        />
        <div
          class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
        />
        <div
          class="dcloud-timeline-item-content"
        >
          Technical testing 2015-09-01
        </div>
      </li>
      <li
        class="dcloud-timeline-item dcloud-timeline-item-pending"
      >
        <div
          class="dcloud-timeline-item-tail"
        />
        <div
          class="dcloud-timeline-item-head dcloud-timeline-item-head-custom dcloud-timeline-item-head-blue"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </div>
        <div
          class="dcloud-timeline-item-content"
        >
          Recording...
        </div>
      </li>
    </ul>
    <button
      class="dcloud-btn dcloud-btn-primary"
      style="margin-top:16px"
      type="button"
    >
      <span>
        Toggle Reverse
      </span>
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/timeline/demo/right.md correctly 1`] = `
LoadedCheerio {
  "0": <ul
    class="dcloud-timeline dcloud-timeline-right"
  >
    <li
      class="dcloud-timeline-item dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Create a services site 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Solve initial network problems 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-custom dcloud-timeline-item-head-red"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
          style="font-size:16px"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="dcloud-timeline-item-content"
      >
        Technical testing 2015-09-01
      </div>
    </li>
    <li
      class="dcloud-timeline-item dcloud-timeline-item-last dcloud-timeline-item-right"
    >
      <div
        class="dcloud-timeline-item-tail"
      />
      <div
        class="dcloud-timeline-item-head dcloud-timeline-item-head-blue"
      />
      <div
        class="dcloud-timeline-item-content"
      >
        Network problems being solved 2015-09-01
      </div>
    </li>
  </ul>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
